boardreadmapper added